feat: P4ADEV-4363 [Design Review] remittance information management - API findInstallmentsByFilters (#369)